panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__generic__test_array_decay_in_selector.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/generic/test_array_decay_in_selector.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/generic/test_array_decay_in_selector.c"
   (function-definition external stack-size=24
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (xs~1 `array<int; 2>` @0) (braced ∅))
         (return (0 `int` @8)))))

----- stderr -----
