panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__generic__test_unevaluated_assocs_are_not_type_checked.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/generic/test_unevaluated_assocs_are_not_type_checked.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (a~1 `int` @0) (42 `int` @0))
         (definition (p~2 `ptr<int>` @8)
            (addressof `ptr<int>` @8
               (a~1 `int` @0)))
         (return (42 `int` @16)))))

----- stderr -----
